--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 @import url("https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
   --font-sora: "Sora", sans-serif;
@@ -18,6 +18,6 @@
 
 @layer base {
   body {
-    @apply font-sans bg-n-1 text-n-3 text-base;
+    @apply font-sans bg-n-1;
   }
 }
